Since Release24.09 still runs on Java 17, we've rolled trunk's compile target back to Java 17 while keeping it tested on Java 21 too.
Since Release24.09 still runs on Java 17, we've rolled trunk's compile target back to Java 17 while keeping it tested on Java 21 too.

Summary:

1) build.gradle and gradle.yml now target Java 17 again (bytecode, javadoc, CI). Please refer how I have used metrix support in gradle.yml file.

2) CI now runs a JDK matrix (17 and 21) on every push/PR, skipping 21 for release* branches.

3) Reverted Java 19+ only calls (Locale.of, Thread.threadId) back to their pre-19 equivalents across 16 files, since JDK 17 doesn't have them.

4) Confirmed those older calls are only "deprecated," not "removed," so they're safe on both JDK versions.

5) Cleaned up all resulting compiler warnings with narrowly-scoped @SuppressWarnings("deprecation").

6) Also caught and reverted two committed secret values in security.properties back to blank.

7) Ran the full unit test suite (423 tests) on both JDK 17 and JDK 21 — 0 warnings, 0 failures on both.